Fixes padding on mobile

--- a/_sass/_placeholder.scss
+++ b/_sass/_placeholder.scss
@@ -18,7 +18,10 @@
 .site-wrapper {
   //max-width: 1400px;
   margin: 0 auto;
-  padding: 4rem;
+  padding: 2rem;
+  @media (min-width: 1024px) {
+    padding: 4rem;
+  }
 }
 
 .logo-mark {
